<resources>
    <string name="app_name">InClass08Self</string>
    <string name="labelName">Name</string>
    <string name="labelEmail">Email</string>
    <string name="labelDept">Department</string>
    <string name="rbSIS">SIS</string>
    <string name="rbCS">CS</string>
    <string name="rbBio">Bio</string>
    <string name="rbOthers">Others</string>
    <string name="labelCurrentMood">Your Current Mood:</string>
    <string name="buttonSubmit">Submit</string>
    <string name="labelStudentInfo">Student Information</string>
    <string name="labelName2">Name</string>
    <string name="labelEmail2">Email</string>
    <string name="labelDept2">Department</string>
    <string name="labelMood2">Mood</string>
    <string name="buttonSave">Save</string>
    <string name="labelEditInfo">Edit Information</string>


    <string name="editTextName">Name</string>
    <string name="editTextEmail">Email</string>
    <string name="textViewDeptLabel">Department</string>
    <string name="textViewMoodLabel">Mood</string>

    <string name="textViewActivityLabel">Edit Information</string>
    <string name="textViewStudentInfoLabel">Student Information</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
